logo align fix

--- a/css/layout.css
+++ b/css/layout.css
@@ -439,7 +439,7 @@ body.royal_preloader {
 	transition : all 0.3s ease-out;
 }
 .logo img{
-	width:160px;
+	width:100px;
 	display:block;
 	-webkit-transition : all 0.3s ease-out;
 	-moz-transition : all 0.3s ease-out;
